--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>www.dongnao.com</groupId>
-    <artifactId>APIAutoL1</artifactId>
+    <artifactId>APITestLesson1Java</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
